--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,24 +5,24 @@ spring:
     active: dev
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    username: root
-    password: "010305"
+    username:
+    password:
     url: jdbc:mysql://localhost:3306/furry_image
   elasticsearch:
     uris: http://localhost:9200
   mail:
     # 指定邮件服务器地址
-    host: smtp.163.com
+    host:
     # 登录账户
-    username: qq2818324149@163.com
+    username:
     # 登录密码
-    password: "KEZXOOEBFPPLESRI"
+    password:
     # 端口
     port: 465
     # 默认编码
     default-encoding: UTF-8
     # 使用的协议
-    protocol: smtps
+    protocol:
     # 其他的属性
     properties:
       "mail.smtp.connectiontimeout": 5000
